# hhl-qiskit-circuits

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: theory.tex
examples/: minimal_hhl.py
legacy/: hhl_tp_original.txt
notebooks/: 01_hhl_algorithm_walkthrough.ipynb  QComp-TP-2-TP-HHL.ipynb
scripts/: compile_latex.py  generate_figures.py  run_hhl_demo.py
src/hhl_lab/: __init__.py  analysis.py  encoding.py  hhl.py  inversion.py  latex.py  matrices.py  qpe.py  simulation.py  visualization.py
tests/: test_analysis.py  test_encoding.py  test_hhl.py  test_inversion.py  test_qpe.py
